<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.edu.pwr.swim.marcinkiewicz.szymon.bmi.MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/mainLayoutRL">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="120sp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/give_your_mass"
        android:id="@+id/massTV"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:layout_toEndOf="@id/massTV"
        android:hint="@string/kg"
        android:id="@+id/massET"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/massTV"
        android:width="120sp"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/give_your_height"
        android:id="@+id/heightTV"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:layout_below="@id/massET"
        android:layout_toRightOf="@id/heightTV"
        android:hint="@string/m"
        android:id="@+id/heightET" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heightET"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_text_count_message"
        android:id="@+id/countBMIBT" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/countBMIBT"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:id="@+id/yourBMITV" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/yourBMITV"
        android:textSize="50sp"
        android:id="@+id/resultTV" />
</RelativeLayout>
</ScrollView>